# django_snackss

./: README.md  db.sqlite3  pyproject.toml
snacks/: urls.py  views.py
snacks_project/: settings.py  urls.py
templates/: base.html  home.html
