[tool.poetry]
name = "django_snackss"
version = "0.1.0"
description = ""
authors = ["RaniaAbdullahh <raniaabdullah6600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
